--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # URL VARIABLES
 #
 # site domain, full URL to the production location of your collection
-url: https://github.com/cboucher01
+url: https://digbmc.github.io
 # path to location on the domain if necessary e.g. /digital/hjccc
 baseurl: /pt-annotated
 # location of code, the full url to your github repository
