--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ title: 'Paul Thomas Annotated: In the Margins'
 tagline: 
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
-description: '“Paul Thomas Annotated: In the Margins” is a digital annotation project devoted to Paul Thomas Anderson’s filmography. It aims to provide pathways into his work by annotating, scene by scene, each of his nine narrative films to date: Hard Eight, Boogie Nights, Magnolia, Punch-Drunk Love, There Will Be Blood, The Master, Inherent Vice, Phantom Thread, and Licorice Pizza. This site is a prototype.'
+description: '“Paul Thomas Annotated: In the Margins” is a digital annotation project devoted to Paul Thomas Anderson’s filmography. It aims to provide pathways into his work by annotating, scene by scene, each of his nine narrative films to date: <em>Hard Eight</em>, <em>Boogie Nights</em>, <em>Magnolia</em>, <em>Punch-Drunk Love</em>, <em>There Will Be Blood</em>, <em>The Master</em>, <em>Inherent Vice</em>, <em>Phantom Thread</em>, and <em>Licorice Pizza</em>. This site is a prototype.'
 # keywords, a short list of subjects describing the collection, separated by semicolon, to appear in rich markup
 keywords: Paul Thomas Anderson; film; screenshot
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
